# womf

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  config.lua  justfile  main.lua  meson.build  vcpkg.json
assets/: Mike.gltf  bin_compile.py  default.frag  default.vert  quad.attributes  quad.indices  skinning.vert  sources.txt
cmake/: LuaJIT.cmake
examples/: animation.lua  animationblending.lua  gltf.lua  quad.lua
src/: animation.cpp  animation.hpp  buffer.cpp  buffer.hpp  die.hpp  function.hpp  graphics.cpp  graphics.hpp  keys.cpp  main.cpp  resource.cpp  resource.hpp  sdlw.cpp  sdlw.hpp  threadpool.cpp  threadpool.hpp  util.hpp
src/lua/: animation.lua  gltf.lua  init.lua  inspect.lua
src/lua/cpml/modules/: mat4.lua
subprojects/: gltf.wrap  glwrap.wrap
